feat: base models frontend crud commit
